services/evaluation-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service-deployment
  namespace: evaluation-service
  labels:
    app: evaluation-service
spec:
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      containers:
        - name: evaluation-service
          image: 360302648026.dkr.ecr.us-east-1.amazonaws.com/fiap-fase3-dev-evaluation:v1.0.0-c91863c
          ports:
            - containerPort: 8004
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
